<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"

    android:orientation="vertical">
    <!--   android:layout_marginLeft="@dimen/activity_vertical_margin"
       android:layout_marginRight="@dimen/activity_vertical_margin"-->
    <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
        android:id="@+id/pic_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/pic_from_camera"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/small_text" />

    <include layout="@layout/divider_horizontal" />

    <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
        android:id="@+id/pic_gallary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/pic_from_gallary"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/small_text" />

    <include layout="@layout/divider_horizontal" />

    <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
        android:id="@+id/remove__photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/remove_photo"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/small_text"
        android:visibility="gone" />
    <!--<include layout="@layout/divider_horizontal"/>-->
</LinearLayout>