<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/requestLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/more_options_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/transfer_image_size"
                    android:layout_height="@dimen/transfer_image_size"
                    android:layout_marginTop="3dp"
                    app:srcCompat="@drawable/transfer_chat" />

                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/request"
                    android:textColor="@color/request_color"
                    android:textSize="@dimen/very_small_text" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/transferLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/more_options_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/transfer_image_size"
                    android:layout_height="@dimen/transfer_image_size"
                    android:layout_marginTop="3dp"
                    app:srcCompat="@drawable/transfer_chat" />

                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/transfer"
                    android:textColor="@color/transfer_color"
                    android:textSize="@dimen/very_small_text" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/screenshotLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/more_options_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/transfer_image_size"
                    android:layout_height="@dimen/transfer_image_size"
                    android:layout_marginTop="3dp"
                    app:srcCompat="@drawable/ic_screenshot" />

                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:paddingLeft="@dimen/very_small_padding"
                    android:paddingRight="@dimen/very_small_padding"
                    android:singleLine="true"
                    android:text="@string/screenshot"
                    android:textColor="@color/screenshot_color"
                    android:textSize="@dimen/micro_text" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/collateralLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/more_options_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="@dimen/transfer_image_size"
                    android:layout_height="@dimen/transfer_image_size"
                    android:layout_marginTop="3dp"
                    app:srcCompat="@drawable/ic_screenshot" />

                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:paddingLeft="@dimen/very_small_padding"
                    android:paddingRight="@dimen/very_small_padding"
                    android:singleLine="true"
                    android:text="@string/collateral"
                    android:textColor="@color/collateral_color"
                    android:textSize="@dimen/micro_text" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/cannedMsglLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/more_options_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="@dimen/transfer_image_size"
                    android:layout_height="@dimen/transfer_image_size"
                    android:layout_marginTop="3dp"
                    app:srcCompat="@drawable/ic_canned_msgs" />

                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:paddingLeft="@dimen/very_small_padding"
                    android:paddingRight="@dimen/very_small_padding"
                    android:singleLine="true"
                    android:text="@string/canned_msg"
                    android:textColor="@color/canned_msg_color"
                    android:textSize="@dimen/micro_text" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linkslLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/more_options_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/transfer_image_size"
                    android:layout_height="@dimen/transfer_image_size"
                    android:layout_marginTop="3dp"
                    app:srcCompat="@drawable/ic_link" />

                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:paddingLeft="@dimen/very_small_padding"
                    android:paddingRight="@dimen/very_small_padding"
                    android:singleLine="true"
                    android:text="@string/links"
                    android:textColor="@color/link_color"
                    android:textSize="@dimen/micro_text" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/more_options_bg"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/transfer_image_size"
                    android:layout_height="@dimen/transfer_image_size"
                    android:layout_marginTop="3dp"
                    app:srcCompat="@drawable/ic_info_new" />

                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:paddingLeft="@dimen/very_small_padding"
                    android:paddingRight="@dimen/very_small_padding"
                    android:text="@string/info"
                    android:textColor="@color/info_color"
                    android:textSize="@dimen/micro_text" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/chatLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/more_options_bg"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/transfer_image_size"
                    android:layout_height="@dimen/transfer_image_size"
                    android:layout_marginTop="3dp"
                    app:srcCompat="@drawable/ic_chat_new" />

                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:paddingLeft="@dimen/very_small_padding"
                    android:paddingRight="@dimen/very_small_padding"
                    android:text="@string/chat"
                    android:textColor="@color/chat_color"
                    android:textSize="@dimen/micro_text" />


            </LinearLayout>

            <View
                android:id="@+id/moreLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/moreLineColor" />

            <LinearLayout
                android:id="@+id/endChatLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/end_chat_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="4dp">


                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/end"
                    android:textColor="@color/white"
                    android:textSize="@dimen/very_small_text" />


                <com.tvisha.click2magic.CustomFontViews.PoppinsMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:textColor="@color/white"
                    android:textSize="@dimen/very_small_text" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>